--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 15px 20px;
-  background-color: #333;
+  background-color: transparent;
   color: #fff;
 }
 
@@ -108,6 +108,17 @@ nav ul li a {
   background-color: rgb(41, 6, 6);
   color: #333;
 }
+.center {
+  text-align: center;
+}
+.content {
+  margin: 20px;
+  padding: 20px;
+  color: #fff;
+}
+.para{
+  margin-top: 80px;
+}
 
 @media (max-width: 768px) {
   nav .toggle-btn {
@@ -121,17 +132,17 @@ nav ul li a {
     text-align: left;
     background-color: #333;
     position: fixed;
-    top: 60px; 
+    top: 60px;
     left: 0;
-    height: 45%; 
-    overflow-y: auto; 
+    height: 45%;
+    overflow-y: auto;
     justify-content: flex-start;
     align-items: flex-start;
     z-index: 10;
   }
 
   nav ul.show {
-    display: table;
+    display: flex;
   }
 
   nav ul li {
@@ -156,8 +167,20 @@ nav ul li a {
   }
 
   .btn1 {
-    width: 100px;
+    width: 100%;
     margin: 0;
     text-align: left;
   }
+
+  .content {
+    margin: 10px;
+    padding: 10px;
+  }
+  .para {
+    margin-top: 40px;
 }
+ .para {
+    margin-top: 20px;
+  }
+}
+
