--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,9 @@ nav ul {
 }
 
 nav ul li {
-  margin-left: 20px;
+  margin-left: 25px;
+  margin-top: 5px;
   position: relative;
-  opacity: 0.8;
   transition: opacity 0.3s ease;
 }
 
@@ -61,9 +61,14 @@ nav ul li:hover {
 
 nav ul li a {
   color: #fff;
+  opacity: 0.8;
   text-decoration: none;
   padding: 8px 16px;
-  transition: background-color 0.3s;
+  transition: opacity 0.3s ease;
+}
+
+nav ul li a.active {
+  opacity: 1;
 }
 
 .dropdown {
@@ -108,18 +113,30 @@ nav ul li a {
   background-color: rgb(41, 6, 6);
   color: #333;
 }
+
 .center {
   text-align: center;
-}
-.content {
-  margin: 20px;
-  padding: 20px;
-  color: #fff;
-}
-.para{
-  margin-top: 80px;
+  font-size: 60px;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 20px;
+  color: #fff;
+  text-align: center; 
+}
+
+.para {
+  margin-top: 40px; 
+  color: aliceblue;
+  text-align: justify;
+  text-justify: inter-word;
+  hyphens: auto;
+}
 @media (max-width: 768px) {
   nav .toggle-btn {
     display: block;
@@ -176,11 +193,8 @@ nav ul li a {
     margin: 10px;
     padding: 10px;
   }
+
   .para {
     margin-top: 40px;
-}
- .para {
-    margin-top: 20px;
   }
 }
-
