--- a/css/About.css
+++ b/css/About.css
@@ -1,33 +1,36 @@
-#aa{
+#aa {
     margin-left: 30px;
     margin-top: 40px;
-    
 }
-#aa h2{
+
+#aa h2 {
     font-size: 40px;
     margin-bottom: 20px;
 }
-#aa p{
+
+#aa p {
     color: rgb(53, 52, 52);
     text-align: justify;
     margin-right: 80px;
 }
+
 #ab {
     margin-left: 20px;
     margin-top: 40px;
-  }
-  
-  .item {
+}
+
+#item {
     display: flex;
     align-items: center;
     gap: 15px; 
-  }
-  
-  .item img {
+}
+
+#item img {
     width: 70px; 
     height: 70px;
-  }
-  .text p{
+}
+
+#text p {
     margin-top: 0.1px;
-    color:rgb(53, 52, 52); ;
-  }
+    color: rgb(53, 52, 52);
+}
