--- a/css/index.css
+++ b/css/index.css
@@ -24,12 +24,552 @@
     text-align: center;
     margin-top: 0; 
 }
-.dis1{
-    margin-left: 150px;
-    padding-top: 30px;
-    width: 300px;
+.sec1 {
+    padding: 20px;
+    margin-top: 30px;
+    position: relative; 
 }
-.dis1 img {
-    max-width: 100%;
-    height: 50%;
+.dis1 {
+    width: 49%;
+    padding: 20px;
+    box-sizing: border-box;
+    float: left; 
+    margin-bottom: 20px;
+    margin-top: -20px;
+    
+}
+
+.dis2 {
+    width: 49%;
+    padding: 20px;
+    box-sizing: border-box;
+    float: right; 
+    margin-bottom: 20px;
+}
+
+.dis3 {
+    width: 49%; 
+    padding: 20px;
+    box-sizing: border-box;
+    float: right;
+    margin-top: -50px;
+    
+}
+
+.dis1 h1 {
+    font-size: 45px;
+}
+
+.dis1 p, .dis2 p, .dis3 p {
+    font-size: 17px;
+    color: dimgrey;
+    text-align: justify;
+}
+.dis1 img, .dis2 img, .dis3 img {
+    width: 100%;
+    height: auto;
+}
+.menu{
+    background-color: black;
+}
+.img-plate {
+    margin-top:-20px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin-left: -10px;
+
+}
+.sec2 {
+    padding: 20px;
+    background-color: rgb(17, 15, 15);
+    padding: 20px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    margin-top: -125px;
+    justify-content: space-between;
+}
+
+.sec2-div1 {
+    margin-bottom: 20px;
+}
+
+.sec2-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    gap: 50px; 
+    margin-top: 90px;
+}
+
+.sec2-div2, .sec2-div3 {
+    border: 1px solid #ccc; 
+    padding: 10px;
+    text-align: left;
+}
+.our-menu {
+    width: 350px; 
+    margin: 0 auto; 
+    text-align: center; 
+    padding: 20px; 
+    box-sizing: border-box; 
+    height: 200px;
+    margin-top: -20px;
+}
+.our-menu p{
+    font-size: small;
+    margin-top: 20px;
+}
+.our-menu h1{
+    font-size: 50px;
+    margin-top: 5px;
+}
+.menu-para{
+    text-align: center;
+    margin: 0 auto; 
+    box-sizing: border-box;
+    width: 600px;
+}
+.btn-menu {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.btn-menu button {
+    padding: 10px 20px;
+    border: 2px solid #ffffff;
+    background-color: transparent;
+    cursor: pointer;
+    color: white;
+}
+
+.btn-menu button:hover {
+    background-color: #f0f0f0;
+    color: black;
+}
+.sec3-img{
+    width: 100%;
+    height: 400px;
+    opacity: 1;
+}
+.sec3-div1{
+    padding: 50px;
+    margin-top: -400px;
+}   
+.sec3-div1 h5{
+    margin-top: 0; 
+    margin-bottom: 5px; 
+    color: rgb(255, 255, 255);
+    text-shadow: 
+        1px 1px 0 #000,  
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000;
+}
+.sec3-div1 h1{
+    font-size: 70px;
+    margin-top: 30px; 
+    margin-bottom: 30px;
+    color: rgb(255, 255, 255);
+    text-shadow: 
+        1px 1px 0 #000,  
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000;
+}
+.sec3-div1 p {
+    color: rgb(255, 255, 255);
+    text-shadow: 
+        1px 1px 0 #000,  
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000;
+    margin-top: 10px; 
+    line-height: 1.5; 
+}
+.image-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; 
+    justify-content: center; 
+    padding: 10px; 
+    padding-top: 100px;
+}
+
+.image-card {
+    flex: 1 0 30%; 
+    max-width: 30%; 
+    box-sizing: border-box; 
+}
+
+.image-card img {
+    width: 100%;
+    height: 180px;
+    display: block;
+}
+.photo-section {
+    display: flex;
+    gap: 30px; 
+    padding: 40px; 
+}
+
+.left-column, .right-column {
+    display: flex;
+    flex-direction: column;
+    gap: 5px; 
+}
+
+.left-column {
+    flex: 1; 
+}
+
+.right-column {
+    display: flex;
+    flex-direction: column;
+    gap: 30px; 
+}
+
+.main-photo  {
+    width: 100%;
+    height: 700px; 
+    object-fit: cover; 
+    display: block;
+}
+.side-photo {
+    width: 100%;
+    height: 500px; 
+    object-fit: cover; 
+    display: block;
+}
+
+.left-column h1 {
+    margin-bottom: 10px; 
+    font-size: 60px;
+}
+
+.left-column p {
+    margin-bottom: 10px; 
+    font-size: 18px;
+    color: dimgrey;
+    text-align: left;
+}
+.new-image {
+    width: 100%; 
+    height: 700px;  
+    box-shadow: black;
+    filter: blur(0px); 
+}
+
+.image-container {
+    position: relative;
+    width: 100%;
+}
+
+.test-text {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    width: 300px;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 
+        1px 1px 0 #000,  
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000;
+}
+.test-text h1 {
+    font-size: 40px; 
+    margin-top: -5px; 
+}
+.card-container {
+    position: absolute;
+    top: 30%; 
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column; 
+    gap: 80px; 
+    align-items: center; 
+    width: 100%;
+}
+
+.card {
+    background: rgb(27, 25, 25); 
+    color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 90%; 
+    text-align: center;
+    height: 100px;
+    position: relative; 
+    overflow: visible;
+}
+
+.card h3 {
+    margin-top: 0;
+}
+
+.card p {
+    margin-bottom: 0;
+}
+.avatar {
+    width: 80px; 
+    height: 80px; 
+    border-radius: 100%; 
+    position: absolute; 
+    top: -60px; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    border: 5px solid #fff;
+}
+.reservation{
+    margin-top: 90px;
+    padding: 20px;
+    text-align: center;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.reservation h1{
+    font-size: 50px;
+    font-weight: bolder;
+}
+.reservation button {
+    background-color: transparent;
+    border: 2px solid black;
+    padding: 10px 10px; 
+    cursor: pointer; 
+    font-size: 16px; 
+    border-radius: 5px; 
+    margin-top: 20px;
+}
+
+.reservation button:hover {
+    background-color: black; 
+    color: white; 
+}
+.reservation h6{
+    margin-top: 40px;
+}
+.reservation h3{
+    font-size: 50px;
+    margin-top: -10px;
+}
+
+
+
+
+
+@media (max-width: 768px) {
+    .con1 b {
+        font-size: 12px;
+        font-weight: bold;
+    }
+
+    .con2 h1 {
+        font-size: 36px;
+        line-height: 1.4;
+    }
+
+    .con3 p {
+        font-size: 12px;
+        line-height: 1.6;
+        padding: 0 10px;
+        text-align: center;
+    }
+    section {
+        margin-top: -70px;
+        padding: 10px;
+    }
+    .sec1 {
+        margin-top: -40px;
+    }
+    
+    .dis1, .dis2, .dis3 {
+        width: 100%;
+        float: none;
+        margin: 0;
+        margin-bottom: 20px;
+        gap: 10px;
+    }
+    .dis1 h1 {
+        font-size: 26px;
+    }
+    .dis1 {
+        margin-top: 0;
+    }
+
+    .dis3 {
+        margin-top: 0;
+    }
+
+    .sec2 {
+        padding: 10px;
+        margin-top: -100px;
+    }
+
+    .our-menu {
+        width: 100%;
+        margin: 0 auto;
+        padding: 10px;
+        height: auto;
+        margin-top: 10px;
+    }
+
+    .our-menu p {
+        font-size: 14px;
+        margin-top: 10px;
+    }
+
+    .our-menu h1 {
+        font-size: 30px;
+        margin-top: 10px;
+    }
+
+    .menu-para {
+        width: 100%;
+        margin-top: 10px;
+        font-size: 14px;
+    }
+
+    .sec2-grid {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+
+    .sec2-div2, .sec2-div3 {
+        margin-bottom: 10px;
+    }
+
+    .sec3 {
+        padding-top: 70px;
+        width: 100%;
+    }
+    .sec3-div1 {
+        padding: 20px;
+        margin-top: -200px;
+    }
+
+    .sec3-div1 h5 {
+        font-size: 16px;
+    }
+
+    .sec3-div1 h1 {
+        font-size: 36px;
+        margin-top: 15px; 
+        margin-bottom: 15px;
+    }
+
+    .sec3-div1 p {
+        font-size: 14px;
+        line-height: 1.3;
+    }
+
+    .sec3-img {
+        width: 100%;
+        height: 200px;
+    }
+    .image-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+    .image-card {
+        flex: 1 0 100%;
+        max-width: 100%;
+    }
+    .photo-section {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    .left-column {
+        order: 1;
+        margin-bottom: 20px;
+    }
+
+    .right-column {
+        order: 2;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .left-column h1 {
+        font-size: 24px;
+        margin: 0 0 10px 0;
+    }
+
+    .left-column p {
+        font-size: 12px;
+        margin: 0 0 20px 0;
+    }
+
+    .new-image {
+        height: 400px;
+    }
+
+    .test-text {
+        width: 80%;
+        top: 10%;
+        font-size: 30px;
+    }
+
+    .test-text h1 {
+        font-size: 20px;
+        margin-top: -20px;
+    }
+    .test-text h6 {
+        font-size: 10px;
+    }
+
+    .card-container {
+        top: 30%;
+        gap: 50px;
+        width: 90%;
+    }
+
+    .card {
+        width: 90%;
+        height: auto;
+        padding: 15px;
+    }
+
+    .avatar {
+        width: 60px;
+        height: 60px;
+        top: -40px;
+    }
+
+    .reservation {
+        margin-top: 350px;
+        text-align: center;
+        display: block;
+    }
+
+    .reservation h1 {
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+
+    .reservation p {
+        font-size: 16px;
+        margin-bottom: 20px;
+    }
+
+    .reservation button {
+        padding: 12px 24px;
+        font-size: 16px;
+        margin: 20px 0;
+        display: inline-block;
+    }
+
+    .reservation h6 {
+        font-size: 14px;
+        margin: 10px 0;
+    }
+
+    .reservation h3 {
+        font-size: 18px;
+        margin-top: 5px;
+    }
 }
