--- a/css/About.css
+++ b/css/About.css
@@ -1,36 +1,18 @@
-#aa {
-    margin-left: 30px;
-    margin-top: 40px;
+body{
+    overflow-x: hidden;
+}
+.custom-font {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    letter-spacing: 2px;
+    font-size: small;
+    font-weight: bold;
+    color: white;
+  }
+  .nunito-custom {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700; 
+  font-style: normal;
+font-size: 14px;
 }
 
-#aa h2 {
-    font-size: 40px;
-    margin-bottom: 20px;
-}
-
-#aa p {
-    color: rgb(53, 52, 52);
-    text-align: justify;
-    margin-right: 80px;
-}
-
-#ab {
-    margin-left: 20px;
-    margin-top: 40px;
-}
-
-#item {
-    display: flex;
-    align-items: center;
-    gap: 15px; 
-}
-
-#item img {
-    width: 70px; 
-    height: 70px;
-}
-
-#text p {
-    margin-top: 0.1px;
-    color: rgb(53, 52, 52);
-}
