--- a/css/Menu.css
+++ b/css/Menu.css
@@ -1,200 +1,39 @@
-.layout {
-    display: flex;
-    margin: 30px;
-  }
-  
-  .fillter {
-    height: 400px;
-    width: 400px;
-    padding: 20px;
-  }
-  
-  .fillter p {
-    margin: 20px 0;
-    font-weight: bold;
-  }
-  
-  .filter-section {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .filter-section label {
-    display: flex;
-    align-items: center;
-  }
-  
-  .filter-section input[type="checkbox"] {
-    margin-right: 10px;
-  }
-  
-  .apply-button {
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #f8c13a;
-    color: rgb(0, 0, 0);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .apply-button:hover {
-    background-color: #f8c13a;
-  }
-  
-  
-  .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 45px;
-    margin-left: 20px;
-    margin-top: 1px;
-  }
-  
-  .card {
-    background-color: white;
-    border-radius: 10px;
-    width: 200px;
-    overflow: hidden;
-    height: 320px;
-    position: relative;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; 
-  }
-  .card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-  }
-  .card.elevated {
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  }
+body{
+  overflow-x: hidden;
+  background-color:#e9ecef;
+}
+.custom-font {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  letter-spacing: 2px;
+  font-size: small;
+  font-weight: bold;
+  color: white;
+}
+.nunito-custom {
+font-family: "Nunito", sans-serif;
+font-optical-sizing: auto;
+font-weight: 700; 
+font-style: normal;
+font-size: 14px;
+}
 
-  .card.elevated:hover {
-    transform: scale(1.05);
-    box-shadow: 0 16px 24px rgba(0, 0, 0, 0.3);
-  }
-  
-  .card-img {
-    width: 100%;
-    height: 45%;
-    object-fit: cover;
-    transition: transform 0.3s ease-in-out;
-  }
-  .card-img:hover {
-    transform: scale(1.1);
-  }
-  .card-content {
-    padding: 10px;
-  }
-  
-  .card-title {
-    font-size: 18px;
-    margin: 10px 0;
-  }
-  
-  .card-text {
-    font-size: 14px;
-    color: #555;
-  }
-  
-  .number {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    bottom: 15px; 
-    left: 15px;   
-  }
-  
-  .number span {
-    background-color: #f8c13a;
-    color: rgb(0, 0, 0);
-    padding: 5px 10px;
-    cursor: pointer;
-    user-select: none;
-    border-radius: 5px;
-    font-size: 10px;
-    font-weight: bold;
-  }
-  
-  .number input {
-    width: 20px;
-    text-align: center;
-    border: 1px solid #807e7e;
-    border-radius: 5px;
-    margin: 0 5px;
-  }
-  
-  .card-button {
-    display: flex;
-    justify-content: flex-end;
-    position: absolute;
-    bottom: 15px; 
-    right: 15px;  
-  }
-  
-  .add-button {
-    background-color: #f8c13a;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    border: none;
-    padding: 3px 10px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .btn-icon {
-    margin-top: 25%;
-  }
-  .cart-icon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: beige;
-    border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 2;
-    cursor: pointer;
-  }
+.menu-item .item-name {
+  font-size: 0.9rem;
+  font-weight:600;
+  letter-spacing: 2px;
+}
+.menu-item .item-price {
+  font-size: 0.8rem; 
+  font-weight:600;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.menu-item .item-description {
+  font-size: 0.875rem; 
+  color: #6c757d;
+}
+.menu-item .dotted-line {
+  border-bottom: 1px dotted #6c757d;
+  margin: 15px 0;
+  width: 285px;
+}
 
-  .cart-icon i {
-    font-size: 13px;
-    color: #d9042e;
-  }
-
-  @media (max-width: 768px) {
-    .layout {
-      flex-direction: column; 
-    }
-  
-    .fillter {
-      margin-left: 80px;
-      width: 236px;
-      height: 236px; 
-      margin-bottom: 20px; 
-      padding: 20px;
-    }
-  
-    .card-container {
-      margin-left: 0;
-      gap: 15px; 
-    }
-  
-    .card {
-      width: 65%; 
-      margin-bottom: 20px; 
-      margin-left: 80px;
-      align-items: center;
-    }
-    .card-img{
-      height: 50%;
-    }
-  }
-  
