--- a/css/About.css
+++ b/css/About.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     letter-spacing: 2px;
     font-size: small;
-    font-weight: bold;
+    font-weight: bolder;
     color: white;
   }
   .nunito-custom {
