--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,4 @@
-body{
-    overflow-x: hidden;
-}
+
 .all-container {
     color: #212529; 
   }
@@ -54,3 +52,47 @@ body{
 
 
 
+/* Extra Small Devices: less than 576px */
+@media (max-width: 575.98px) {
+  /* Styles for xs devices */
+  body{
+    overflow-x: hidden;
+}
+.pro-1{
+  background-color: rgb(38, 157, 42);
+}
+}
+
+/* Small Devices: 576px and up */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  /* Styles for sm devices */
+  body{
+    overflow-x: hidden;
+}
+.pro-1{
+  background-color: rgb(41, 26, 203);
+}
+
+}
+
+/* Medium Devices: 768px and up */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  /* Styles for md devices */
+  body{
+    overflow-x: hidden;
+}
+.pro-1{
+  background-color: rgb(160, 56, 56);
+}
+}
+
+/* Large Devices: 992px and up */
+@media (min-width: 992px) {
+  /* Styles for lg devices */
+  body{
+    overflow-x: hidden;
+}
+.pro-1{
+  background-color: black;
+}
+}
