--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,6 @@
-
+body{
+  overflow-x: hidden;
+}
 .all-container {
     color: #212529; 
   }
@@ -37,7 +39,6 @@
   .menu-item .dotted-line {
     border-bottom: 1px dashed #6c757d;
     margin: 15px 0;
-    /* width: 500px; */
   }
 
  
@@ -47,6 +48,105 @@
     height: auto;
 }
 
+.toggle-btn {
+  font-size: 24px;
+  background: none;
+  color: whitesmoke;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  padding: 0; 
+}
 
+.menu-icon {
+  display: block; 
+}
+
+.close-icon {
+  display: none;
+  font-size: 24px;
+}
+
+#nav-links.show + .toggle-btn .menu-icon {
+  display: none; 
+}
+
+#nav-links.show + .toggle-btn .close-icon {
+  display: block;
+}
+
+#nav-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  display: none;
+  width: 300px;
+  height: auto;
+}
+
+
+#nav-links.show {
+  display: flex;
+}
+
+#nav-links li {
+  margin: 0.2rem 0;
+}
+
+#nav-links a {
+  text-decoration: none;
+  color: rgb(72, 71, 71);
+  padding: 0.3rem 1rem;
+  display: block;
+}
+#nav-links a:hover {
+  color: #000;
+  font-weight: 500;
+}
+
+#nav-links a.active {
+  font-weight: 600;
+  color: #1a1a1a;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 80px;
+  width: 150px;
+  background-color: white;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+ 
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+ 
+}
+.btn-reservation a {
+  font-weight: 500;
+}
+
+.btn-reservation {
+  background: none;
+  border: none;
+}
+.divider{
+  border-bottom:1px solid #33333363;
+  width: 100%;
+}
 
 
